--- a/client/src/components/body/joinproject/joinprojectprofile.css
+++ b/client/src/components/body/joinproject/joinprojectprofile.css
@@ -17,6 +17,7 @@
   text-align: justify;
   box-shadow:inset 3px 3px 10px gray,inset -1px -1px 10px gray;
   border-radius: 7px;
+  background: whitesmoke;
 }
 
 
@@ -26,36 +27,45 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   margin: 1em;
 }
 
 .projectOverview{
   border-radius: 5px;
   padding: 1em;
+  width: 100%;
+  box-shadow: 2px 5px 10px silver;
 }
 
-.project-img{
+.project-image{
   padding-left: 1.5em;
-  height: 200px;
+  width: 35em;
+  height: 12em ;
 }
 
+/* .project-image img{
+  height: 100%;
+  width: 100% ;
+} */
 
 /* division3 */
 
 .project-details{
-    padding: 1em;
-
+  padding: 1em;
 }
 
 .project-description{
   border-radius: 5px;
   padding: 1em;
+  box-shadow: 2px 5px 10px silver;
 }
 
 .project-requirement{
   border-radius: 5px;
   padding: 1em;
   margin-top: 1em;
+  box-shadow: 2px 5px 10px silver;
 
 }
 
@@ -166,17 +176,23 @@
   justify-content: flex-start;
   align-items: center;
   text-align: justify;
+  letter-spacing: 1px;
 }
 
 .owner-profile-img{
   /* margin-bottom: 1em; */
-  width: 150px;
-  height: 150px;
+  width: 50px;
+  height: 50px;
   overflow: hidden;
   position: relative;
   margin: 15px auto;
   border: 1px solid #ddd;
   border-radius: 50%;
+}
+
+.owner-profile-img img{
+  height: 100%;
+  width: 100%;
 }
 
 .owner-profile-img > i{
