--- a/client/src/components/body/myprojects/myProjects.css
+++ b/client/src/components/body/myprojects/myProjects.css
@@ -18,8 +18,9 @@
 }
 
 .project-img{
+    padding-left: 1.5em;
     width: 100%;
-    height: 12em;
+    height: 12em ;
 }
 
 .project-detail{
@@ -36,7 +37,7 @@
 }
 
 .Card:hover{
-    transform: scale(1.05);
+    transform: scale(1.02);
     box-shadow:  -3px -3px 7px rgb(212, 209, 209), 3px 3px 7px #a3b1c6;
 }
 
@@ -44,7 +45,6 @@
     border: none;
     background:#ffffff;
     color:rgb(0, 0, 0);
-    border-radius:50px;
     font-size:1rem;
     height:40px;
     box-shadow:inset 3px 3px 15px #b3b6b3;
@@ -57,7 +57,7 @@
 .button-readmore:hover{
     color: darkblue;
     border: none;
-    box-shadow:  3px 3px 15px #b3b6b3;
+    box-shadow:  2px 5px 10px silver;
 }
 
 .like-icon{
