--- a/client/src/components/body/projects/projects.css
+++ b/client/src/components/body/projects/projects.css
@@ -1,20 +1,26 @@
-.grd-projects{
+.projects-main-container{
     background: #C9CCD3;
-    background-image: linear-gradient(to top, #fdeeee 0%, #accbee 100%);
+    background-image: linear-gradient(to right, #fdf9ee 0%, #accbee 100%);
+}
+
+.grd-projects{
     display: grid;
     grid-template-columns: repeat(auto-fit , minmax(300px,3fr));
+    grid-template-rows: auto;
     grid-gap: 3em;
+    
 }
 
 .grd-projects > div{
-    background-color: #fff;
+    background-color: #fefefe;
 }
 
 .Card{
     box-shadow:0 10px 15px rgba(181,181,181,.7);
-    background:#fff;
+    background:rgb(255, 255, 255);
     padding: .5em;
     border-radius:2% 2% 2% 2%;
+    transition: .4s;
 }
 
 .project-img{
@@ -31,8 +37,12 @@
 
 .flx-card-bottom{
     display:flex;
-    align-items:center;
+    align-items:flex-end;
     justify-content:space-between;
+    bottom: 0;
+    position: relative;
+    bottom: 0;
+    
 }
 
 .Card:hover{
@@ -58,6 +68,15 @@
     color: darkblue;
     border: none;
     box-shadow:  3px 3px 15px #b3b6b3;
+}
+
+.like-button{
+    background: none;
+    border: none;
+}
+
+.like-button:focus .like-icon{
+    color: red;
 }
 
 .like-icon{
