--- a/client/src/components/header/navbar.css
+++ b/client/src/components/header/navbar.css
@@ -6,7 +6,7 @@ Navbar
 header{
     width: 100%;
     height: 50px;
-    background: #00BBF0;
+    background-image: linear-gradient(to right, #007adf 0%, #00ecbc 100%);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -158,7 +158,41 @@ header{
     
 }
 
+/* Profile Dropdown  */
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: whitesmoke;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin: 0.9em;
+  }
+
+.dropdown-content a {
+    float: none;
+    color: black !important;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    background-image: linear-gradient(to right, #74befc 0%, #56f8d8 100%);
+  }
+  
+  .drop-nav:hover .dropdown-content {
+    display: block;
+  }
+
+.profile_dp{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
 
 
 /* -------------------------Header.css--------------------------- */
@@ -186,21 +220,18 @@ header ul li{
     opacity: 1;
 } */
 
-.profile_dp{
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-}
 
 /* --------- Dropdown ---------- */
-.drop-nav{
+/* .drop-nav{
     position: relative;
     padding: 10px 0;
 }
+
 .drop-nav a{
     text-transform: capitalize;
     overflow: hidden;
 }
+
 .drop-nav .dropdown{
     position: absolute;
     background: #282c34;
@@ -209,9 +240,11 @@ header ul li{
     top: 50px;
     display: none;
 }
+
 .drop-nav .dropdown li{
     display: block;
 }
+
 .drop-nav:hover .dropdown{
     display: block;
-}
+} */
