--- a/client/src/components/body/joinproject/joinprojectprofile.css
+++ b/client/src/components/body/joinproject/joinprojectprofile.css
@@ -17,7 +17,7 @@
   text-align: justify;
   box-shadow:inset 3px 3px 10px gray,inset -1px -1px 10px gray;
   border-radius: 7px;
-  background: whitesmoke;
+  /* background: whitesmoke; */
 }
 
 
