--- a/client/src/components/body/auth/auth.css
+++ b/client/src/components/body/auth/auth.css
@@ -1,15 +1,20 @@
 .login_main{
-    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    background-image: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
     display: flex;
     justify-content: center;
     flex-direction: row;
     align-items: center;
 }
+
 .login_page{
-    border: 2px solid silver !important;
+    background-color: #fff;
+    border-radius: 7px;
+    /* border: 2px solid silver !important; */
     max-width: 500px;
     color: #444;
+    box-shadow: 2px 5px 10px silver;
 }
+
 .login_page h2{
     text-transform: uppercase;
     font-size: 2rem;
@@ -21,14 +26,14 @@
     width: 100%;
     height: 45px;
     margin: 10px 0;
-    border: 2px solid #777;
+    border: 1px solid rgb(184, 184, 184);
+    border-bottom: 2px solid #777;
     outline: none;
     padding: 0 10px;
 }
 .login_page .login_row{
     display: flex;
     justify-content: space-between;
-
     flex-direction: row;
 }
 .login_page .login_row a{
@@ -36,13 +41,23 @@
 }
 .login_page .login_row button{
     width: 150px;
-    padding: 5px 0;
+    padding: 7px;
     color: white;
+    font-weight: 600;
     background: black;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     margin-right: 10px;
+    border: none;
+    background-image: linear-gradient(to right, #9be15d 0%, #00e3ae 100%);
+    transition: .4s;
 }
+
+.login_page .login_row button:hover{
+    transform: scale(1.1);
+    background-image: linear-gradient(to right, #00e3ae 0%, #9be15d 100%);
+}
+
 .login_page p{
     margin: 10px 0;
 }
@@ -68,20 +83,28 @@
 .fg_pass .fg_row input{
     width: 100%;
     height: 45px;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(133, 130, 130);
+    border-bottom: 2px solid rgb(105, 102, 102);
     outline: none;
     padding: 0 15px;
     border-radius: 3px;
     margin: 5px 0;
 }
 .fg_pass .fg_row button{
-    background: #333;
+    background-image: linear-gradient(-225deg, #5D9FFF 0%, #a4bed8 48%, #6BBBFF 100%);
     color: white;
+    font-weight: 600;
     padding: 10px 30px;
     text-transform: uppercase;
     letter-spacing: 1.3px;
     border-radius: 3px;
     margin-top: 15px;
+    border: none;
+    transition: .4s;
+}
+
+.fg_pass .fg_row button:hover{
+    background-image: linear-gradient(-225deg, #6BBBFF 0%, #a4bed8 48%, #5D9FFF 100%);
 }
 
 /* ---------- Google ---------------- */
@@ -91,7 +114,7 @@
 }
 
 .login_page .social{
-    box-shadow: 2px 2px 4px grey, -2px -2px 4px grey;
+    box-shadow: 2px 5px 10px silver;
 }
 
 .login_page .social button{
@@ -101,5 +124,40 @@
     font-weight: 200;
     text-transform: capitalize;
     letter-spacing: 1.3px;
-    box-shadow: 2px 2px 4px grey, -2px -2px 4px grey;
+    box-shadow: 2px 5px 10px silver;
+}
+
+
+
+.reset-pwd-main{
+    display: flex;
+    justify-content: center;
+}
+
+.reset-pwd input{
+    width: 100%;
+    height: 45px;
+    border: 1px solid rgb(133, 130, 130);
+    border-bottom: 2px solid rgb(105, 102, 102);
+    outline: none;
+    padding: 0 15px;
+    border-radius: 3px;
+    margin: 5px 0;
+}
+
+.reset-pwd button{
+    background-image: linear-gradient(-225deg, #5D9FFF 0%, #a4bed8 48%, #6BBBFF 100%);
+    color: white;
+    font-weight: 600;
+    padding: 10px 30px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    border-radius: 3px;
+    margin-top: 15px;
+    border: none;
+    transition: .4s;
+}
+
+.reset-pwd button:hover{
+    background-image: linear-gradient(-225deg, #6BBBFF 0%, #a4bed8 48%, #5D9FFF 100%);
 }
