--- a/client/src/components/body/myprojects/viewproject.css
+++ b/client/src/components/body/myprojects/viewproject.css
@@ -2,11 +2,13 @@
 
 .grd-joinProjectContainer{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: minmax(585px,auto);
+    grid-template-columns: repeat(auto-fit , minmax(100px,3fr));
+    /* grid-template-columns: repeat(auto-fit, 2fr); */
+    /* grid-template-rows: minmax(585px,auto); */
     grid-template-areas: "project-content project-content project-content project-content  owner-profile";
     grid-gap: 2em;
     padding: 1em;
+    background-image: linear-gradient(-225deg, #6BBBFF 0%, #a4bed8 48%, #5D9FFF 100%);
 }
 
 .flx-projectContent{
@@ -15,8 +17,9 @@
   display: flex;
   flex-direction: column;
   text-align: justify;
-  box-shadow:inset 3px 3px 10px gray,inset -1px -1px 10px gray;
+  box-shadow: 2px 5px 10px silver;
   border-radius: 7px;
+  background: #fff;
 }
 
 
@@ -34,9 +37,10 @@
   padding: 1em;
 }
 
-.project-img{
+.project-image{
   padding-left: 1.5em;
-  height: 200px;
+  width: 35em;
+  height: 12em ;
 }
 
 
@@ -153,11 +157,10 @@
 
 
 /* owner-profile */
-
+/* 
 .flx-ownerProfile{
   grid-area: owner-profile;
   padding: 1.1em;
-  /* box-shadow: 3px 3px 10px gray,-1px -1px 10px gray; */
   border: 2px solid silver;
   border-radius: 7px;
   height: 35em;
@@ -166,19 +169,19 @@
   justify-content: flex-start;
   align-items: center;
   text-align: justify;
-}
+} */
 
-.owner-profile-img{
+/* .owner-profile-img{ */
   /* margin-bottom: 1em; */
-  width: 150px;
+  /* width: 150px;
   height: 150px;
   overflow: hidden;
   position: relative;
   margin: 15px auto;
   border: 1px solid #ddd;
   border-radius: 50%;
-}
-
+} */
+/* 
 .owner-profile-img > i{
   font-size: 70px;
   border: 2px solid #d6d9db;
@@ -201,4 +204,4 @@
 
 .Button-showProfile button:hover{
   transform: scalex(1.1);
-}
+} */
