--- a/client/src/components/body/projects/projects.css
+++ b/client/src/components/body/projects/projects.css
@@ -15,6 +15,10 @@
     background-color: #fefefe;
 }
 
+.PCard:hover{
+    transform: scale(1.05);
+}
+
 .PCard{
     box-shadow:0 10px 15px rgba(181,181,181,.7);
     background:#fff;
